# Third-coursework-

./: .gitignore.save  README.md  pyproject.toml  requirements.txt
src/: Operation.py  main.py  utils.py
tests/: conftest.py  test_operation_class.py  test_utils.py
